# fastapi-clean-architecture-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.app.yml  docker-compose.postgres.yml  docker-compose.yml  pre_start.sh  pyproject.toml  start.sh
src/: config.py  init_db.py  pre_start.py  start.py
src/common/: __init__.py  errors.py  stars.py  strict_model.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  auth.py  characters.py  id_.py  items.py  movie.py  review.py  user.py  users.py
src/domain/interfaces/security/: __init__.py  hash_.py  token.py
src/domain/usecases/: __init__.py  error_handlers.py  errors.py
src/domain/usecases/auth/: __init__.py  authenticate.py  builder.py  create_access_token.py  errors.py  read_access_token.py  sign_in.py  sign_up.py
src/domain/usecases/auth/interfaces/: __init__.py
src/domain/usecases/interfaces/: __init__.py  errors.py
src/domain/usecases/interfaces/repositories/: __init__.py  movie.py  movie_errors.py  review.py  review_errors.py  user.py  user_errors.py
src/domain/usecases/interfaces/security/: __init__.py
src/domain/usecases/interfaces/services/: __init__.py
src/domain/usecases/interfaces/services/security/: __init__.py  token.py  token_errors.py
src/domain/usecases/movie/: __init__.py  builder.py  create.py  delete.py  delete_by_id.py  errors.py  get_all.py  get_all_reviews.py  get_all_reviews_by_id.py  get_by_id.py
src/domain/usecases/movie/interfaces/: __init__.py  repository.py  repository_errors.py
src/domain/usecases/review/: __init__.py  builder.py  create.py  delete.py  delete_by_id.py  errors.py  get_by_id.py
src/domain/usecases/review/interfaces/: __init__.py  repository.py  repository_errors.py
src/domain/usecases/user/: __init__.py  authenticate.py  builder.py  create.py  create_access_token.py  delete.py  delete_by_id.py  errors.py  get_all.py  get_all_reviews.py  get_all_reviews_by_id.py  get_by_id.py  is_super_user.py  read_access_token.py
src/domain/usecases/user/interfaces/: __init__.py  errors.py  repository.py  repository_errors.py
src/infrastructure/: __init__.py
src/infrastructure/api_server/: __init__.py
src/infrastructure/api_server/fastapi_/: fastapi_.py
src/infrastructure/api_server/interfaces/: __init__.py  api_server.py
src/infrastructure/api_servers/: __init__.py  base.py
src/infrastructure/api_servers/fastapi_/: __init__.py  fastapi_.py
src/infrastructure/api_servers/fastapi_/api_v1/: __init__.py  api.py
src/infrastructure/api_servers/fastapi_/api_v1/routers/: __init__.py  auth.py  dependencies.py  exception_handlers.py  movies.py  reviews.py  users.py
src/infrastructure/api_servers/fastapi_/api_v1/routers/dependencies/: __init__.py  (+5 more)
src/infrastructure/api_servers/responses/: __init__.py  empty.py
src/infrastructure/api_servers/responses/base/: __init__.py  error.py
src/infrastructure/api_servers/responses/error/: http.py  internal.py  validation.py
src/infrastructure/repositories/: __init__.py
src/infrastructure/repositories/sqlalchemy_/: __init__.py  base.py  movie.py  review.py  sqlalchemy_.py  user.py
src/infrastructure/repositories/sqlalchemy_/alembic/: env.py
src/infrastructure/repositories/sqlalchemy_/models/: __init__.py  constants.py  id_.py  movie.py  review.py  user.py
src/services/security/: __init__.py  hash_.py  password.py  token.py
src/settings/: __init__.py  app.py  base.py  dev.py  prod.py  settings.py  test.py
(+38 files in other folders)
