[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["1owkeyme <lowkeyme.official@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"

uvicorn = "^0.29.0"
starlette = "^0.37.2"
fastapi = "^0.110.2"

sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
